{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 242,
  "lineage": "0d98ea61-8c05-3a4a-67ae-0067598e50b7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-11T01:49:08.831-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/analog-bot-410808/global/firewalls/vpc1-allow-http-to-app",
            "log_config": [],
            "name": "vpc1-allow-http-to-app",
            "network": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/networks/vpc-tp-mercredi-001",
            "priority": 1001,
            "project": "analog-bot-410808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/firewalls/vpc1-allow-http-to-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_instance_1.google_compute_network.vpc_network_test_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-11T01:49:08.973-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/analog-bot-410808/global/firewalls/vpc1-allow-bastion-to-app",
            "log_config": [],
            "name": "vpc1-allow-bastion-to-app",
            "network": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/networks/vpc-tp-mercredi-001",
            "priority": 1002,
            "project": "analog-bot-410808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/firewalls/vpc1-allow-bastion-to-app",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "bastion"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_instance_1.google_compute_network.vpc_network_test_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-11T01:49:08.965-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/analog-bot-410808/global/firewalls/vpc1-allow-all-ssh-to-bastion",
            "log_config": [],
            "name": "vpc1-allow-all-ssh-to-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/networks/vpc-tp-mercredi-001",
            "priority": 1003,
            "project": "analog-bot-410808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/firewalls/vpc1-allow-all-ssh-to-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_instance_1.google_compute_network.vpc_network_test_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vcp2-rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-11T01:54:58.286-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "10.0.20.0/24"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/analog-bot-410808/global/firewalls/vpc2-allow-all-ssh-from-bastion-to-vcp-2",
            "log_config": [],
            "name": "vpc2-allow-all-ssh-from-bastion-to-vcp-2",
            "network": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/networks/vpc-tp2-mercredi-002",
            "priority": 1001,
            "project": "analog-bot-410808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/firewalls/vpc2-allow-all-ssh-from-bastion-to-vcp-2",
            "source_ranges": [
              "10.0.10.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_instance_2.google_compute_network.vpc_network_test_1"
          ]
        }
      ]
    },
    {
      "module": "module.instance1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "moninstance1",
      "provider": "module.instance1.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240110",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/zones/us-central1-a/disks/bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/analog-bot-410808/zones/us-central1-a/instances/bastion",
            "instance_id": "3057867321750196360",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "florian.tellier02:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIGmlBm2CIRAax7AeOGCejk97Grbi/Vb+M8SbbgsHN1lu florian.tellier02@gmail.com"
            },
            "metadata_fingerprint": "6JBCJoG5TBs=",
            "name": "bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.238.99.151",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/networks/vpc-tp-mercredi-001",
                "network_ip": "10.0.10.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/regions/us-central1/subnetworks/subnetwork-tp-mercredi-001",
                "subnetwork_project": "analog-bot-410808"
              }
            ],
            "project": "analog-bot-410808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/zones/us-central1-a/instances/bastion",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.vpc_instance_1.google_compute_network.vpc_network_test_1",
            "module.vpc_instance_1.google_compute_subnetwork.subnet_test"
          ]
        }
      ]
    },
    {
      "module": "module.instance2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "moninstance1",
      "provider": "module.instance2.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240110",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/zones/us-central1-a/disks/app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/analog-bot-410808/zones/us-central1-a/instances/app",
            "instance_id": "1320504435783372937",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "florian.tellier02:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIGmlBm2CIRAax7AeOGCejk97Grbi/Vb+M8SbbgsHN1lu florian.tellier02@gmail.com"
            },
            "metadata_fingerprint": "6JBCJoG5TBs=",
            "name": "app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.193.128.53",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/networks/vpc-tp-mercredi-001",
                "network_ip": "10.0.10.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/regions/us-central1/subnetworks/subnetwork-tp-mercredi-001",
                "subnetwork_project": "analog-bot-410808"
              }
            ],
            "project": "analog-bot-410808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/zones/us-central1-a/instances/app",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "app"
            ],
            "tags_fingerprint": "-ITvvbWD_xo=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.vpc_instance_1.google_compute_network.vpc_network_test_1",
            "module.vpc_instance_1.google_compute_subnetwork.subnet_test"
          ]
        }
      ]
    },
    {
      "module": "module.instance3",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "moninstance1",
      "provider": "module.instance3.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240110",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/zones/us-central1-a/disks/bd"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/analog-bot-410808/zones/us-central1-a/instances/bd",
            "instance_id": "5181535174230410652",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "florian.tellier02:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIGmlBm2CIRAax7AeOGCejk97Grbi/Vb+M8SbbgsHN1lu florian.tellier02@gmail.com"
            },
            "metadata_fingerprint": "6JBCJoG5TBs=",
            "name": "bd",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.30.40.90",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/networks/vpc-tp2-mercredi-002",
                "network_ip": "10.0.20.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/regions/us-central1/subnetworks/subnetwork-tp2-mercredi-002",
                "subnetwork_project": "analog-bot-410808"
              }
            ],
            "project": "analog-bot-410808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/zones/us-central1-a/instances/bd",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bd"
            ],
            "tags_fingerprint": "a3LKdjioqww=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.vpc_instance_2.google_compute_network.vpc_network_test_1",
            "module.vpc_instance_2.google_compute_subnetwork.subnet_test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_instance_1",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule4",
      "provider": "module.vpc_instance_1.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2024-01-11T01:54:58.371-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/analog-bot-410808/global/firewalls/tp-mercredi-001-deny-all",
            "log_config": [],
            "name": "tp-mercredi-001-deny-all",
            "network": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/networks/vpc-tp-mercredi-001",
            "priority": 2000,
            "project": "analog-bot-410808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/firewalls/tp-mercredi-001-deny-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_instance_1.google_compute_network.vpc_network_test_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_instance_1",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network_test_1",
      "provider": "module.vpc_instance_1.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/analog-bot-410808/global/networks/vpc-tp-mercredi-001",
            "mtu": 0,
            "name": "vpc-tp-mercredi-001",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8196587643198378200",
            "project": "analog-bot-410808",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/networks/vpc-tp-mercredi-001"
          }
        }
      ]
    },
    {
      "module": "module.vpc_instance_1",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_test",
      "provider": "module.vpc_instance_1.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-11T01:01:01.917-08:00",
            "gateway_address": "10.0.10.1",
            "id": "projects/analog-bot-410808/regions/us-central1/subnetworks/subnetwork-tp-mercredi-001",
            "ip_cidr_range": "10.0.10.0/24",
            "name": "subnetwork-tp-mercredi-001",
            "network": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/networks/vpc-tp-mercredi-001",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "analog-bot-410808",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/regions/us-central1/subnetworks/subnetwork-tp-mercredi-001",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_instance_1.google_compute_network.vpc_network_test_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_instance_2",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule4",
      "provider": "module.vpc_instance_2.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2024-01-11T01:54:58.364-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/analog-bot-410808/global/firewalls/tp2-mercredi-002-deny-all",
            "log_config": [],
            "name": "tp2-mercredi-002-deny-all",
            "network": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/networks/vpc-tp2-mercredi-002",
            "priority": 2000,
            "project": "analog-bot-410808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/firewalls/tp2-mercredi-002-deny-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_instance_2.google_compute_network.vpc_network_test_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_instance_2",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network_test_1",
      "provider": "module.vpc_instance_2.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/analog-bot-410808/global/networks/vpc-tp2-mercredi-002",
            "mtu": 0,
            "name": "vpc-tp2-mercredi-002",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7717412762052331366",
            "project": "analog-bot-410808",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/networks/vpc-tp2-mercredi-002"
          }
        }
      ]
    },
    {
      "module": "module.vpc_instance_2",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_test",
      "provider": "module.vpc_instance_2.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-11T01:49:09.028-08:00",
            "gateway_address": "10.0.20.1",
            "id": "projects/analog-bot-410808/regions/us-central1/subnetworks/subnetwork-tp2-mercredi-002",
            "ip_cidr_range": "10.0.20.0/24",
            "name": "subnetwork-tp2-mercredi-002",
            "network": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/global/networks/vpc-tp2-mercredi-002",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "analog-bot-410808",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/analog-bot-410808/regions/us-central1/subnetworks/subnetwork-tp2-mercredi-002",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_instance_2.google_compute_network.vpc_network_test_1"
          ]
        }
      ]
    }
  ]
}